--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -11,7 +11,7 @@ node {
     registryHost = "127.0.0.1:30400/"
     imageName = "${registryHost}${appName}:${tag}"
     env.BUILDIMG=imageName
-
+    env.tag=tag
     stage "Build"
     
         sh "docker build -t ${imageName} ../hello-kenzan"
@@ -22,5 +22,5 @@ node {
 
     stage "Deploy"
 
-        sh "sed 's#__IMAGE__#'$BUILDIMG'#' ../hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
+        sh "sed 's#$BUILD_TAG#'$tag'#' ../hello-kenzan/k8s/deployment.yaml | kubectl apply -f -"
 }
