--- a/applications/hello-kenzan/Jenkinsfile
+++ b/applications/hello-kenzan/Jenkinsfile
@@ -23,5 +23,6 @@ node {
     stage "Deploy"
 
         sh "sed -i 's#TAG#'$tag'#' ../hello-kenzan/k8s/deployment.yaml "
+        sh "cat ../hello-kenzan/k8s/deployment.yaml"
         sh "kubectl apply -f ../hello-kenzan/k8s/deployment.yaml"
 }
